--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <header class="header text_black">
       <nav class="header__menu">
         <ul class="header__links-list">
-          <li class="header__links-list-item header__link_active">
-            <a href="" class="header__link_active">главная</a>
+          <li class="header__links-list-item">
+            <a href="#0" class="header__link link_active">главная</a>
           </li>
           <li class="header__links-list-item">
-            <a href="" class="header__link">посмотреть лоты</a>
+            <a href="#0" class="header__link">посмотреть лоты</a>
           </li>
           <li class="header__links-list-item">
-            <a href="" class="header__link">об аукционе</a>
+            <a href="#0" class="header__link">об аукционе</a>
           </li>
         </ul>
       </nav>
@@ -59,7 +59,7 @@
         <h2 class="lots__heading section__title">Лоты</h2>
         <ul class="lots__card-list">
           <li class="lots__card-list-item">
-            <a href="" class="card-link">
+            <a href="#0" class="card-link">
               <article class="card card_type_film">
                 <div class="overlay"></div>
                 <h3 class="card__title section_content">
@@ -74,7 +74,7 @@
             </a>
           </li>
           <li class="lots__card-list-item">
-            <a href="" class="card-link">
+            <a href="#0" class="card-link">
               <article class="card card_type_book">
                 <div class="overlay"></div>
                 <h3 class="card__title section_content">
@@ -92,7 +92,7 @@
             </a>
           </li>
           <li class="lots__card-list-item">
-            <a href="" class="card-link">
+            <a href="#0" class="card-link">
               <article class="card card_type_picture">
                 <div class="overlay"></div>
                 <h3 class="card__title section_content">
@@ -151,13 +151,13 @@
       <nav class="footer__menu">
         <ul class="footer__menu-list">
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link_active">главная</a>
+            <a href="#0" class="footer__menu-link link_active">главная</a>
           </li>
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link">посмотреть лоты</a>
+            <a href="#0" class="footer__menu-link">посмотреть лоты</a>
           </li>
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link">об аукционе</a>
+            <a href="#0" class="footer__menu-link">об аукционе</a>
           </li>
         </ul>
       </nav>
